fix mobile overflow

--- a/index.css
+++ b/index.css
@@ -421,22 +421,31 @@ section.hero h2 {
 }
 
 @media only screen and (max-width: 1000px) {
-  nav ul {
+  /* nav ul {
     display: none;
-  }
+  } */
 
   nav.header-nav ul.open {
+    animation: nav-animation-show .3s forwards;
+  }
+
+  nav.header-nav ul.close {
+    animation: nav-animation-hide .3s forwards;
+  }
+
+  nav.header-nav ul {
+    transform: translateX(-100%);
     position: fixed;
-    top: 0;
     display: flex;
     top: 0;
     left: 0;
+    width: 100%;
+    height: 100%;
     background-color: var(--background);
     flex-direction: column;
     justify-content: center;
     align-items: center;
     gap: 3rem;
-    animation: nav-animation .3s forwards;
   }
 
   section:not(.hero) {
@@ -513,15 +522,23 @@ section.hero h2 {
   }
 }
 
-@keyframes nav-animation {
+@keyframes nav-animation-show {
   from {
-    width: 0;
-    height: 0;
+    transform: translateX(-100%);
   }
 
   to {
-    width: 100vw;
-    height: 100vh;
+    transform: translateX(0);
+  }
+}
+
+@keyframes nav-animation-hide {
+  from {
+    transform: translateX(0);
+  }
+
+  to {
+    transform: translateX(-100%);
   }
 }
 
@@ -590,6 +607,11 @@ section.hero h2 {
   z-index: 4;
 }
 
+@media only screen and (max-width: 450px) {
+  .service {
+    flex: 1 0 20rem;
+  }
+}
 
 
 /* PROJECT SECTION */
@@ -600,10 +622,12 @@ section.projects .grid {
   display: flex;
   flex-wrap: wrap;
   gap: 4rem;
+  align-items: center;
+  justify-content: center;
 }
 
 .grid .project {
-  flex: 1 1 40rem;
+  flex: 0 1 42.5rem;
   display: flex;
   flex-direction: column;
   overflow: hidden;
@@ -805,7 +829,7 @@ section.contact p a {
 
 @media only screen and (max-width: 900px) {
   section.contact {
-    margin-bottom: 0;
+    margin-bottom: 10rem;
   }
 
   .contact-details {
